public/assets/css.css
body {
  padding-top: 5rem;
}

.split {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  overflow-y: auto;
  overflow-x: hidden;
}
.gutter {
  background-color: transparent;
  background-repeat: no-repeat;
  background-position: 50%;
}
.gutter.gutter-horizontal {
  cursor: col-resize;
  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==");
}
.gutter.gutter-vertical {
  cursor: row-resize;
  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=");
}
.split.split-horizontal,
.gutter.gutter-horizontal {
  height: 100%;
  float: left;
}
.colDivider {
  height: 50rem;
}
.gutter.gutter-horizontal {
  background-repeat: space;
}
.preWrap,
.preWrap code {
  white-space: pre-wrap;
  overflow-wrap: break-word;
  word-break: break-word;
}

/* See https://css-tricks.com/hash-tag-links-padding/ */
#index-page h4 {
  z-index: -100;
}
#index-page h4::before {
  z-index: -100;
  display: block;
  content: " ";
  margin-top: -4rem;
  height: 4rem;
  visibility: hidden;
  pointer-events: none;
}

.btn-docu {
  background-color: #00baa1;
  color: #fff;
  border-color: #121517;
}

.btn-docu:hover,
.btn-docu:focus,
.btn-docu:active,
.btn-docu.active,
.open .dropdown-toggle.btn-docu {
  background-color: #02d6ba;
  color: #fff;
  border-color: #050607;
}

.jumbotron {
  background: #000 !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  padding-left: 30px !important;
  padding-right: 30px !important;
  margin: 0 !important;
  color: white;
}

.jumbotron p {
  font-size: 1.45em;
}

hr.styled {
  overflow: visible; /* For IE */
  padding: 0;
  border: none;
  border-top: medium double 0;
  color: #000;
  text-align: center;
}
hr.styled:after {
  content: "§";
  display: inline-block;
  position: relative;
  top: -0.7em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: white;
}

.feedback,
.hidden {
  display: none;
}
span.feedback {
  margin-left: 2em;
}

/* form.eg {max-width: 30em;} */
form.eg label {
  font-weight: 550;
}

pre.json-display {
  background-color: ghostwhite;
  border: 1px solid silver;
  padding: 10px 20px;
}
.json-key {
  color: brown;
}
.json-value {
  color: navy;
}
.json-string {
  color: olive;
}

/********************************************************************/
/* index page tabs */
#index-page a.nav-link {
  background: #007bff;
  color: white;
  margin-right: 3em;
  opacity: 0.6;
}

#index-page a.nav-link.active {
  opacity: unset;
}

/* From http://tobiasahlin.com/spinkit/ */
.spinner {
  margin: 100px auto;
  width: 150px;
  height: 140px;
  text-align: center;
  font-size: 10px;
}

.spinner > div {
  background-color: blueviolet;
  height: 100%;
  width: 6px;
  display: inline-block;

  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
  animation: sk-stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.spinner .rect3 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

@-webkit-keyframes sk-stretchdelay {
  0%,
  40%,
  100% {
    -webkit-transform: scaleY(0.4);
  }
  20% {
    -webkit-transform: scaleY(1);
  }
}

@keyframes sk-stretchdelay {
  0%,
  40%,
  100% {
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }
  20% {
    transform: scaleY(1);
    -webkit-transform: scaleY(1);
  }
}

/* THis is where our code starts
BOOKMARKED */

.logo {
  margin-left: 50px;
  position: absolute;
}

.logout {
  font: bold 16px Arial, Helvetica, sans-serif;
  color: white;
  background-color: rgb(115, 115, 115);
  padding-top: 10px;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-left: 30px;
  border: rgb(115, 115, 115);
  border-radius: 5px;
  margin-right: 5%;
}

.logout:hover {
  font: bold 16px Arial, Helvetica, sans-serif;
  color: white;
  background-color: rgb(150, 150, 150);
  padding-top: 10px;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-left: 30px;
  border: rgb(115, 115, 115);
  border-radius: 5px;
  margin-right: 5%;
  display: flex;
  flex-direction: row-reverse;
}

.header.two {
  margin-left: 200px;
  font: bold 30px Arial, Helvetica, sans-serif;
  color: #000000;
  margin-top: 70px;
}

.navbar.navbar-expand-md.navbar-light.bg-light.fixed-top {
  height: 90px;
  border-bottom: 2px solid #dadada;
}

.welcomeText {
  height: 70px;
  color: #6b6b6b;
  width: 300px;
  padding-top: 25px;
  font: normal 16px Arial, Helvetica, sans-serif;
  margin-left: 70%;
}

/* This is the left side bars */
.btn.sidebarOne {
  background-color: white;
  color: #6b6666;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  margin: 10px;
  position: fixed;
}

.btn.sidebarOne:hover {
  background-color: #dadada;
  color: #6b6666;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  margin: 10px;
  position: fixed;
}

.btn.sidebarTwo {
  background-color: #fafafa;
  color: #ef3125;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  border-left: 2px solid;
  margin: 10px;
  margin-top: 100px;
  position: fixed;
}

.btn.sidebarTwo:hover {
  background-color: #dadada;
  color: #ef3125;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  border-left: 2px solid;
  margin: 10px;
  margin-top: 100px;
  position: fixed;
}

.btn.sidebarThree {
  background-color: white;
  color: #6b6666;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  margin: 10px;
  margin-top: 190px;
  position: fixed;
}

.btn.sidebarThree:hover {
  background-color: #dadada;
  color: #6b6666;
  display: flex;
  flex-direction: column;
  align-items: center;
  white-space: normal;
  width: 120px;
  height: 100px;
  font: normal 16px Arial, Helvetica, sans-serif;
  margin: 10px;
  margin-top: 190px;
  position: fixed;
}

/* Here's the main contents 
and the actual table stuff */

.form.row.layout {
  width: 1200px;
  margin-left: 180px;
  margin-top: 30px;
  border-radius: 5px;
  background: #ffffff;
  box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1);
}

/* This is the format for the label on the for each of the 
columns in the table */

.labelName {
  margin-left: 45px;
  padding: 10px;
  text-decoration: underline;
  color: black;
  font-weight: bold;
}

.labelStatus {
  margin-left: 490px;
  padding: 10px;
  text-decoration: underline;
  color: black;
  font-weight: bold;
}

.labelDeadline {
  margin-left: 200px;
  padding: 10px;
  text-decoration: underline;
  color: black;
  font-weight: bold;
}

/* This is the format for the cells inside the table */
.label.name {
  padding: 10px;
  position: absolute;
  font: normal 16px Arial, Helvetica, sans-serif;
}

.label.status {
  margin-left: 630px;
  color: red;
  text-decoration: underline;
  padding: 5px;
  position: absolute;
}

.label.deadline {
  border: none;
  margin-left: 980px;
  padding: 5px;
  position: absolute;
}

.form.row.layout ul {
  /* ul stands for untitled list */
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
}

.form.row.layout ul li {
  /* ul stands for untitled list and li is list items */
  vertical-align: top;
  height: 40px;
}

/* This is the text on the button */
.form.row.layout ul li button {
  width: 1150px;
  padding-bottom: 40px;
  display: flex;
  background-color: #ffffff;
  border: none;
}

.form.row.layout ul li button:hover {
  width: 1150px;
  padding-bottom: 40px;
  display: flex;
  border: 2px black;
  background-color: rgb(131, 157, 196);
}

/* Google Icons */
.material-icons.red600 {
  font-size: 40px;
}

/* Now starting here will the formattings for the
admin page */

.submitted.link {
  appearance: button;
}

